# fcoverage

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: acceptance.yml  black.yml  fcoverage_coverage.yml  fcoverage_design.yml  fcoverage_extract.yml  flake8.yml  pylint.yml  pytest.yml  sss.yml  ssss.yml
dummy_project/: coverage.json  doc2.txt
dummy_project/.fcoverage/: config.yml
dummy_project/src/dummy/: main.py
dummy_project/src/dummy/utils/: calc.py  util.py
dummy_project/tests/: conftest.py  test_calc.py  test_greet.py
prompts/: feature_extraction.txt
src/fcoverage/: __init__.py  main.py  models.py
src/fcoverage/models/: FeatureList.py  code_summary.py  feature_list.py  tests_summary.py
src/fcoverage/prompts/: code_summarization_1_system.txt  code_summarization_2_system.txt  code_summarization_module.txt  code_summarization_package.txt  feature_design.txt  feature_extraction.txt  feature_generate_ideal_test_cases.txt  feature_test_mapping.txt  feature_tests_coverage.txt  feature_tests_improvements.txt  feature_tests_report.txt  feature_tests_system.txt  test_to_feature.txt  test_utils_summarization.txt  tests_summarization_1_system.txt  tests_summarization_2_system.txt
src/fcoverage/tasks/: __init__.py  analysis_tests.py  base.py  build_codebase_rag.py  code_analysis.py  code_summarization.py  feature_catalog.py  feature_coverage.py  feature_design.py  feature_extraction.py  feature_manifest.py  feature_test_mapping.py  reporting.py  sourcecode_embedding.py  test_analysis.py  tests_summarization.py
src/fcoverage/utils/: http.py  llm.py  mongo.py  prompts.py  vdb.py
src/fcoverage/utils/code/: pytest_utils.py  python_utils.py
target-repository-files/: config-example.yml  config.yml
tests/: conftest.py
tests/acceptance/: conftest.py  test_e2e.py  test_feature_extract.py  test_summary.py
tests/dummy_project/: doc1.txt  main.py
tests/dummy_project/.fcoverage/: config.yml
tests/dummy_project/.fcoverage/prompts/: feature_extraction.txt
tests/dummy_project/utils/: calc.py
tests/tasks/: test_code_analysis.py  test_code_embeddings.py  test_code_summarization.py  test_feature_extraction.py
tests/utils/: test_http.py  test_prompts.py  test_pytest_utils.py  test_python_utils.py
