[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcoverage"
version = "0.1.0"
description = "Feature-coverage: An AI-powered assistant to help projects understand and improve their test coverage and quality by analyzing documentation and code."
authors = [
    { name = "Mehrdad Abdi", email = "newmrd@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "protobuf==3.20.3",
    "requests>=2.25.1",
    "pytest-coverage",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-google-genai>=2.1.5",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "pymongo>=4.13.0",
    "GitPython>=3.1.44",

]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
fcoverage = "fcoverage.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
