[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fcoverage"
version = "0.1.0"
description = "Feature-coverage: An AI-powered assistant to help projects understand and improve their test coverage and quality by analyzing documentation and code."
authors = [
    { name = "Mehrdad Abdi", email = "newmrd@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "protobuf==3.20.3",
    "requests>=2.25.1",
    "pytest-coverage",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-google-genai>=2.1.5",
    "langchain-openai",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "pymongo>=4.13.0",
    "GitPython>=3.1.44",
    "grpcio-status==1.49.0rc1",
    "googleapis-common-protos==1.70.0",
    "google-api-core==1.34.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
fcoverage = "fcoverage.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
